src/test/ui/borrowck/borrowck-move-out-of-vec-tail.stderr
error[E0508]: cannot move out of type `[Foo]`, a non-copy slice
  --> $DIR/borrowck-move-out-of-vec-tail.rs:19:19
   |
LL |             match tail {
   |                   ^^^^ cannot move out of here
LL |
LL |                 &[Foo { string: a },
   |                                 - data moved here
LL |                   Foo { string: b }] => {
   |                                 - ...and here
   |
note: move occurs because these variables have types that don't implement the `Copy` trait
  --> $DIR/borrowck-move-out-of-vec-tail.rs:21:33
   |
LL |                 &[Foo { string: a },
   |                                 ^
LL |                   Foo { string: b }] => {
   |                                 ^
help: consider removing the `&`
   |
LL |                 [Foo { string: a },
LL |                   Foo { string: b }] => {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0508`.
